Add home page club description. Add Adriano's bio

--- a/coaches/index.html
+++ b/coaches/index.html
@@ -283,7 +283,9 @@
 			
 
 			<div itemprop="articleSection">
-			<p>Coaches information here…</p>
+			<h3>R. Adriano de Souza</h3>
+<p><strong>Head Coach</strong></p>
+<p>Native Brazilian with past experience playing highly-competitive volleyball in a youth club from age 15 to 18 years old. He also had 2 years of playing at a semiprofessional beach volleyball level as a teen. R. Adriano has over 15 years of experience in athletic training and coaching. He has a management background in both soccer and volleyball Academy training and competitive league organization. He has worked with youth as a personal trainer, coach, and mentor. R. Adriano has had various jobs coaching youth and developing their fundamentals as well as training them at a competitive level. He prides in being able to use his talent and experience to train his own children and enjoys any opportunity to help them in their personal progression and development of athletic ability.</p>
 
 
 			</div>
