--- a/index.html
+++ b/index.html
@@ -268,6 +268,15 @@
 	<div id="header-home">
     <div class="row">
         <div class="small-12 columns">
+          <p style="margin-top: 2em;">VOLEI XTREME is a non-profit organization. A fun, competitive, energetic, family-based youth volleyball club for girls! We take pride in providing a wholesome recreational activity that strengthens the abilities of your player to the level in which they aspire to achieve. Our club was created by a board consisting of parents wanting more and the best for their daughters, while maintaining important spiritual beliefs. We are established in the North Idaho area serving in multiple cities of the evergreen region as a non-profit organization.</p>
+          <h3>Mission Statement</h3>
+          VOLEI XTREME is committed to:
+          <ul style="list-style-position: inside">
+            <li>Teach, build, guide and improve skills</li>
+            <li>Instill hard work, desire, determination and most of all INSPIRE</li>
+            <li>Strengthen abilities to a level far exceeding expectations</li>
+            <li>Our promise is to care and mold your player into star character</li>
+          </ul>
         </div><!-- /.medium-4.columns -->
     </div><!-- /.row -->
 </div><!-- /#header-home -->
@@ -335,7 +344,7 @@
 		</a>
 	
 	<h2 class="font-size-h3 t10">Coaches</h2>
-	<p>Coaches information here...</p>
+	<p><strong>Head coach:</strong> R. Adriano de Souza</p>
 	<p><a class="button tiny radius" href="https://voleixtreme.github.io/coaches/">More ›</a></p>
 </div>
 	
@@ -354,12 +363,12 @@
 
 
 <div class="row">
-    <div id="videoModal" class="reveal-modal large" data-reveal="">
-  <div class="flex-video widescreen vimeo" style="display: block;">
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/3b5zCFSmVvU" frameborder="0" allowfullscreen=""></iframe>
-  </div>
-  <a class="close-reveal-modal">&#215;</a>
-</div>
+    <!-- <div id="videoModal" class="reveal-modal large" data-reveal=""> -->
+<!--   <div class="flex-video widescreen vimeo" style="display: block;"> -->
+<!--     <iframe width="1280" height="720" src="https://www.youtube.com/embed/3b5zCFSmVvU" frameborder="0" allowfullscreen></iframe> -->
+<!--   </div> -->
+<!--   <a class="close-reveal-modal">&#215;</a> -->
+<!-- </div> -->
 
 </div><!-- /.row -->
 
