Update contact information

--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,7 @@
 
 
 	<!-- Search Engine Optimization -->
-	<meta name="description" content="Get in touch.">
+	<meta name="description" content="">
   	<meta name="google-site-verification" content="Vk0IOJ2jwG_qEoG7fuEXYqv0m2rLa8P778Fi_GrsgEQ">
 	<meta name="msvalidate.01" content="0FB4C028ABCF07C908C54386ABD2D97F" >
 	<link rel="author" href="https://plus.google.com/u/0/118311555303973066167">
@@ -37,7 +37,7 @@
 
 	<!-- Facebook Open Graph -->
 	<meta property="og:title" content="Contact">
-	<meta property="og:description" content="Get in touch.">
+	<meta property="og:description" content="">
 	<meta property="og:url" content="https://voleixtreme.github.io/contact/">
 	<meta property="og:locale" content="en_EN">
 	<meta property="og:type" content="website">
@@ -52,7 +52,7 @@
 	<meta name="twitter:site" content="phlow">
 	<meta name="twitter:creator" content="phlow">
 	<meta name="twitter:title" content="Contact">
-	<meta name="twitter:description" content="Get in touch.">
+	<meta name="twitter:description" content="">
 	
 	
 
@@ -271,20 +271,26 @@
 
 				<div itemprop="name">
 					<p class="subheadline"></p>
-					<h1>Contact</h1>
+					<h1>Get in touch</h1>
 				</div>
 			</header>
 
 
 			
 			<p class="teaser" itemprop="description">
-				Get in touch.
+				
 			</p>
 			
 
 			<div itemprop="articleSection">
-			<p>Conact information here…</p>
+			<h3>Email</h3>
+<p><a href="mailto:voleixtreme@gmail.com">Send us an email</a><br /></p>
 
+<h3>Facebook</h3>
+<p><a href="https://www.facebook.com/voleixtremeinc/">Facebook page</a></p>
+
+<h3>Phone</h3>
+<p>Phone contact request by email</p>
 
 			</div>
 
