--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 	<div id="header-home">
     <div class="row">
         <div class="small-12 columns">
-          <p style="margin-top: 2em;">VOLEI XTREME is a non-profit organization. A fun, competitive, energetic, family-based youth volleyball club for girls! We take pride in providing a wholesome recreational activity that strengthens the abilities of your player to the level in which they aspire to achieve. Our club was created by a board consisting of parents wanting more and the best for their daughters, while maintaining important spiritual beliefs. We are established in the North Idaho area serving in multiple cities of the evergreen region as a non-profit organization.</p>
+          <p style="margin-top: 2em;"><strong>VOLEI XTREME</strong> is a non-profit organization. A fun, competitive, energetic, family-based youth volleyball club for girls! We take pride in providing a wholesome recreational activity that strengthens the abilities of your player to the level in which they aspire to achieve. We are established in the North Idaho area serving in multiple cities of the evergreen region as a non-profit organization.</p>
           <h3>Mission Statement</h3>
           VOLEI XTREME is committed to:
           <ul style="list-style-position: inside">
