Add valentines fundraiser flyer

--- a/index.html
+++ b/index.html
@@ -267,17 +267,11 @@
 
 	<div id="header-home">
     <div class="row">
-        <div class="small-12 columns">
-          <p style="margin-top: 2em;"><strong>VOLEI XTREME</strong> is a non-profit organization. A fun, competitive, energetic, family-based youth volleyball club for girls! We take pride in providing a wholesome recreational activity that strengthens the abilities of your player to the level in which they aspire to achieve. We are established in the North Idaho area serving in multiple cities of the evergreen region as a non-profit organization.</p>
-          <h3>Mission Statement</h3>
-          VOLEI XTREME is committed to:
-          <ul style="list-style-position: inside">
-            <li>Teach, build, guide and improve skills</li>
-            <li>Instill hard work, desire, determination and most of all INSPIRE</li>
-            <li>Strengthen abilities to a level far exceeding expectations</li>
-            <li>Our promise is to care and mold your player into star character</li>
-          </ul>
-        </div><!-- /.medium-4.columns -->
+      <div class="small-12 columns">
+        <a href="../images/vxfundraiserflyer.pdf" target="_blank">
+         <img class="t60" src="../images/valentinesfundraiser.png" alt="">
+        </a>
+      </div><!-- /.medium-4.columns -->
     </div><!-- /.row -->
 </div><!-- /#header-home -->
 
