Add buzzworthy sideout champions

--- a/buzz/index.html
+++ b/buzz/index.html
@@ -284,7 +284,12 @@
 
 			<div itemprop="articleSection">
 			<ul>
-  <li><a href="http://www.cdapress.com/article/20170117/ARTICLE/170119779">Coeur d’Alene/Post Falls Press coverage of 1st place finish at Lights Out tournament in Wenatchee, WA</a></li>
+  <li>
+    <p><strong>Tournament Champions at Side Out Classic</strong> <img src="../images/sideoutchampions.jpg" alt="" /></p>
+  </li>
+  <li>
+    <p><a href="http://www.cdapress.com/article/20170117/ARTICLE/170119779">Coeur d’Alene/Post Falls Press coverage of 1st place finish at Lights Out tournament in Wenatchee, WA</a></p>
+  </li>
 </ul>
 
 			</div>
