--- a/buzz/index.html
+++ b/buzz/index.html
@@ -283,14 +283,24 @@
 			
 
 			<div itemprop="articleSection">
-			<ul>
-  <li>
-    <p><strong>Tournament Champions at Side Out Classic</strong> <img src="../images/sideoutchampions.jpg" alt="" /></p>
-  </li>
-  <li>
-    <p><a href="http://www.cdapress.com/article/20170117/ARTICLE/170119779">Coeur d’Alene/Post Falls Press coverage of 1st place finish at Lights Out tournament in Wenatchee, WA</a></p>
-  </li>
-</ul>
+			<p>
+<h3>"Sham-Rock n Roll" - Tournament Champions</h3> <img src="../images/shamrockchamps.jpg" alt="" />
+</p>
+
+<p>
+<h3>"Treaty Rock" - Tournament Champions</h3> <img src="../images/treatyrockchamps.jpg" alt="" />
+</p>
+
+<p>
+<h3>"Pete Bell Classic" - Tournament Champions</h3> <img src="../images/petebellclassic.jpg" alt="" />
+</p>
+
+<p>
+<h3>"Side Out Classic" - Tournament Champions</h3> <img src="../images/sideoutchampions.jpg" alt="" />
+</p>
+
+<p><br />
+<a href="http://www.cdapress.com/article/20170117/ARTICLE/170119779">Coeur d’Alene/Post Falls Press coverage of 1st place finish at Lights Out tournament in Wenatchee, WA</a></p>
 
 			</div>
 
