--- a/index.html
+++ b/index.html
@@ -268,10 +268,10 @@
 	<div id="header-home">
     <div class="row">
       <div class="small-12 columns">
-        <h2 style="text-align: center">Benefit Dinner scheduled: 4-9 PM</h2>
-        <a href="../images/VXBenefitInvite.pdf" target="_blank">
-          <img class="t60" src="../images/vxbenefitdinner.png" alt="">
-        </a>
+        <!-- <h2 style="text-align: center">Benefit Dinner scheduled: 4-9 PM</h2> -->
+        <!-- <a href="../images/VXBenefitInvite.pdf" target="_blank"> -->
+        <!-- <img class="t60" src="../images/vxbenefitdinner.png" alt=""> -->
+        <!-- </a> -->
       </div><!-- /.medium-4.columns -->
     </div><!-- /.row -->
 </div><!-- /#header-home -->
