Champions on schedule tournament listing

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -284,11 +284,11 @@
 
 			<div itemprop="articleSection">
 			<ul>
-  <li>January 14, 2017 - Lights Out (Wenatchee, WA): <strong>1st Place</strong></li>
-  <li>February 12, 2017 - Sideout Classic (HUB, Spokane, WA)</li>
-  <li>March 4, 2017 - Pete Bell Classic (HUB, Spokane, WA)</li>
-  <li>March 11, 2017 - Treaty Rock (Post Falls, ID)</li>
-  <li>March 18, 2017 - Shamrock and Roll (Central Valley, Spokane Valley, WA)</li>
+  <li>January 14, 2017 - Lights Out (Wenatchee, WA): <strong>Champions</strong></li>
+  <li>February 12, 2017 - Sideout Classic (HUB, Spokane, WA): <strong>Champions</strong></li>
+  <li>March 4, 2017 - Pete Bell Classic (HUB, Spokane, WA): <strong>Champions</strong></li>
+  <li>March 11, 2017 - Treaty Rock (Post Falls, ID): <strong>Champions</strong></li>
+  <li>March 18, 2017 - Shamrock and Roll (Central Valley, Spokane Valley, WA): <strong>Champions</strong></li>
   <li>March 25, 2017 - March Madness (Kennewick, WA)</li>
   <li>April 8, 2017 - INK (HUB, Spokane, WA)</li>
   <li>April 15, 2017 - Eggs-treme Challenge (Lakeland Schools, Rathdrum ID)</li>
