--- a/schedule/index.html
+++ b/schedule/index.html
@@ -289,9 +289,9 @@
   <li>March 4, 2017 - Pete Bell Classic (HUB, Spokane, WA): <strong>Champions</strong></li>
   <li>March 11, 2017 - Treaty Rock (Post Falls, ID): <strong>Champions</strong></li>
   <li>March 18, 2017 - Shamrock and Roll (Central Valley, Spokane Valley, WA): <strong>Champions</strong></li>
-  <li>March 25, 2017 - March Madness (Kennewick, WA)</li>
-  <li>April 8, 2017 - INK (HUB, Spokane, WA)</li>
-  <li>April 15, 2017 - Eggs-treme Challenge (Lakeland Schools, Rathdrum ID)</li>
+  <li>March 25, 2017 - March Madness (Kennewick, WA): <strong>Champions</strong></li>
+  <li>April 8, 2017 - INK (HUB, Spokane, WA): <strong>2nd Place</strong></li>
+  <li>April 15, 2017 - Spring Fling U16 (Cheney, WA): <strong>Champions</strong></li>
   <li>April 28-29, 2017 - Super Regionals (Boise, ID)</li>
   <li>May 26-29, 2017 - West Coast Championships (Las Vegas, NV)</li>
 </ul>
