West coast championships

--- a/buzz/index.html
+++ b/buzz/index.html
@@ -298,6 +298,12 @@
 <hr />
 
 <p>
+<h3>"West Coast Championships (Las Vegas)"</h3> <img src="../images/westcoastvegas.jpg" alt="" />
+</p>
+
+<hr />
+
+<p>
 <h3>"Idaho Classic Super Regionals in Boise (West Coast Championships qualifier in Las Vegas)" - 2nd Place</h3> <img src="../images/regionals.jpg" alt="" />
 </p>
 
