Emerald City classic champions

--- a/buzz/index.html
+++ b/buzz/index.html
@@ -284,6 +284,23 @@
 
 			<div itemprop="articleSection">
 			<p>
+<h3>Emerald City Classic (Seattle, WA) - Champions (U16 Club Division)</h3>
+<img src="../images/emeraldteamchamps.jpeg" alt="" />
+<img src="../images/emeraldteamgoldmedal.jpeg" alt="" />
+
+<h5>Trophy!</h5>
+<img src="../images/emeraldmayadaphleyah.jpeg" alt="" />
+
+<h5>All-Tournament Player!</h5>
+<img src="../images/emeraldmayaalltourney.jpeg" alt="" />
+
+<h5>Tournament MVP!</h5>
+<img src="../images/emeralddaphmvp.jpeg" alt="" />
+</p>
+
+<hr />
+
+<p>
 <h3>"Idaho Power League AAU Gold Bracket (Eagle, ID)" - Champions</h3> <img src="../images/idahopowerleaguechamps.jpg" alt="" />
 </p>
 
