--- a/schedule/index.html
+++ b/schedule/index.html
@@ -289,6 +289,7 @@
   <li>February 3, 2018 - Superspike (Spokane Valley, WA): <strong>Champions</strong></li>
   <li>February 17-18, 2018 - President’s Weekend Tourney (Covington, WA)</li>
   <li>March 10, 2018 - Idaho Power League AAU Gold Bracket (Eagle, ID): <strong>Champions</strong></li>
+  <li>May 26-28, 2018 - Emerald City Classic (Seattle, WA): <strong>Champions</strong> (U16 Club Division)</li>
 </ul>
 
 <h2 id="2017">2017</h2>
